added final index.html

--- a/index.html
+++ b/index.html
@@ -1244,23 +1244,16 @@ pre[class*="language-"] {
 <body>
   <article class="markdown-body"><h1 align="center">Learn-Object_Oriented_programming-with-us</h1>
 
-
-
-
-<h3> Learn By Topic: </h3>          
-
-
-
-
-
-
+<h3> Learn By Topic: </h3>
 
 <h1></h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <h3 style="display:inline;"><a href="HTML_src/class_objects.html">Class-objects</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/inheritance.html">Inheritance</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/polymorphism.html">Polymorphism</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/encapsulation.html">Encapsulation</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/abstraction.html">Abstraction</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href=""></a></h3>
 
+
+
 <h1 class="atx" id=""></h1>
-<h1 class="atx" id="what-is-oopand39s">What is OOP's</h1>
+<h1 class="atx" id="what-is-oopand39s">What is OOP's?</h1>
 <ul>
 <li><p>Object-oriented programming (OOP) is a computer programming model that organizes software design around data, or objects, rather than functions and logic.</p>
 </li>
@@ -1302,7 +1295,7 @@ pre[class*="language-"] {
 <h1 class="atx" id="thank-you-peace-✌️">Thank you. Peace ✌️.</h1>
 <hr>
 <div>
-<h4 align="center">Made with ❤️ by <a href="https://github.com/sasivatsal7122https://github.com/sasivatsal7122">SasiVatsal</a> and <a href="https://github.com/SaiMowli">Mowli</a>
+<h4 align="center">Made with ❤️ by <a href="https://github.com/sasivatsal7122">SasiVatsal</a> and <a href="https://github.com/SaiMowli">Mowli</a>
 </h4></div>
 
 <hr>
