--- a/index.html
+++ b/index.html
@@ -1250,8 +1250,6 @@ pre[class*="language-"] {
 
 <h3 style="display:inline;"><a href="HTML_src/class_objects.html">Class-objects</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/inheritance.html">Inheritance</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/polymorphism.html">Polymorphism</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/encapsulation.html">Encapsulation</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href="HTML_src/abstraction.html">Abstraction</a></h3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h3 style="display:inline;"><a href=""></a></h3>
 
-
-
 <h1 class="atx" id=""></h1>
 <h1 class="atx" id="what-is-oopand39s">What is OOP's?</h1>
 <ul>
@@ -1292,7 +1290,14 @@ pre[class*="language-"] {
 <li><strong>Polymorphism:</strong>&nbsp;many methods can do the same task</li>
 </ul>
 <h3 class="atx" id="this-is-brief-introduction-to-oopand39s-concepts-weand39ll-extend-our-knowledge-on-oopand39s-in-next-sections-of-this-tutorial">This is brief introduction to OOP's concepts, we'll extend our knowledge on oop's in next sections of this tutorial</h3>
+<div>
+<br>
+<br>
+</div>
+
 <h1 class="atx" id="thank-you-peace-✌️">Thank you. Peace ✌️.</h1>
+
+
 <hr>
 <div>
 <h4 align="center">Made with ❤️ by <a href="https://github.com/sasivatsal7122">SasiVatsal</a> and <a href="https://github.com/SaiMowli">Mowli</a>
