--- a/HTML_src/inheritance2.html
+++ b/HTML_src/inheritance2.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Inheritance-2</title>
+<link rel="icon" href="py.png">
   <style>
   @font-face {
   font-family: octicons-link;
