--- a/HTML_src/indexc.html
+++ b/HTML_src/indexc.html
@@ -1257,7 +1257,7 @@ pre[class*="language-"] {
   <style>.markdown-body{}pre.front-matter{display:none!important;}</style>
 </head>
 <body>
-  <article class="markdown-body"><h1 align="center" style="color:#79D70F;"><a href='index.html'style="color:#79D70F;">Learn-Object_Oriented_programming-with-us</a></h1>
+  <article class="markdown-body"><h1 align="center"><a href='index.html'style="color:#79D70F;">Learn-Object_Oriented_programming-with-us</a></h1>
 
 <h3> Learn By Topic: </h3>
 
