--- a/HTML_src/inheritance2.html
+++ b/HTML_src/inheritance2.html
@@ -1259,8 +1259,8 @@ pre[class*="language-"] {
   <style>.markdown-body{}pre.front-matter{display:none!important;}</style>
 </head>
 <body>
-  <article class="markdown-body"><h1 align="center" style="color:#79D70F;"	
-><a href='indexc.html'>Learn-Object_Oriented_programming-with-us</a></h1>
+  <article class="markdown-body"><h1 align="center" 	
+><a href='indexc.html' style="color:#79D70F;">Learn-Object_Oriented_programming-with-us</a></h1>
 
 <h3> Learn By Topic: </h3>
 
